Controller, Dto and Service added: primary