@@ -1,6 +1,10 @@
 package com.montola.school.course.service.impl;
 
+import com.montola.school.course.dto.TopicRequestDto;
+import com.montola.school.course.dto.TopicResponseDto;
+import com.montola.school.course.mapper.TopicMapper;
 import com.montola.school.course.model.Topic;
+import com.montola.school.course.repository.ChapterRepository;
 import com.montola.school.course.repository.TopicRepository;
 import com.montola.school.course.service.TopicService;
 import com.montola.school.common.exception.ResourceNotFoundException;
@@ -11,6 +15,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * Implementation of {@link TopicService}.
@@ -27,44 +32,47 @@ import java.util.Optional;
 public class TopicServiceImpl implements TopicService {
 
     private final TopicRepository topicRepository;
+    private final ChapterRepository chapterRepository;
+    private final TopicMapper topicMapper;
 
     @Override
     @Transactional
-    public Topic create(Topic topic) {
-        log.info("Creating new topic: {}", topic.getTitle());
-
-        return topicRepository.save(topic);
+    public TopicResponseDto create(TopicRequestDto dto) {
+        log.info("Creating new topic: {}", dto.getTitle());
+        Topic topic = topicMapper.toEntity(dto);
+        topic.setChapter(chapterRepository.findById(dto.getChapterId())
+                .orElseThrow(() -> new ResourceNotFoundException("chapter.notfound")));
+        return topicMapper.toResponseDto(topicRepository.save(topic));
     }
 
     @Override
-    public List<Topic> getAll() {
+    public List<TopicResponseDto> getAll() {
         log.debug("Fetching all active topics");
-
         return topicRepository.findAll()
                 .stream()
                 .filter(t -> !t.isDeleted())
-                .toList();
+                .map(topicMapper::toResponseDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Optional<Topic> getById(Long id) {
+    public Optional<TopicResponseDto> getById(Long id) {
         log.debug("Fetching topic by ID: {}", id);
-
         return topicRepository.findById(id)
-                .filter(t -> !t.isDeleted());
+                .filter(t -> !t.isDeleted())
+                .map(topicMapper::toResponseDto);
     }
 
     @Override
     @Transactional
-    public Topic update(Long id, Topic updated) {
+    public TopicResponseDto update(Long id, TopicRequestDto dto) {
         log.info("Updating topic with ID: {}", id);
-
         return topicRepository.findById(id)
                 .map(existing -> {
-                    existing.setTitle(updated.getTitle());
-                    existing.setDescription(updated.getDescription());
-
-                    return topicRepository.save(existing);
+                    existing.setTitle(dto.getTitle());
+                    existing.setDescription(dto.getDescription());
+                    existing.setOrderIndex(dto.getOrderIndex());
+                    return topicMapper.toResponseDto(topicRepository.save(existing));
                 })
                 .orElseThrow(() -> {
                     log.error("Topic not found with ID: {}", id);
@@ -76,7 +84,6 @@ public class TopicServiceImpl implements TopicService {
     @Transactional
     public void delete(Long id) {
         log.warn("Soft deleting topic with ID: {}", id);
-
         topicRepository.findById(id).ifPresent(entity -> {
             entity.setDeleted(true);
             topicRepository.save(entity);
